plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'nl.devc0n.machinelearning'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Browser automation
    implementation 'org.seleniumhq.selenium:selenium-java:4.38.0'

    // Image processing
    implementation 'org.bytedeco:javacv-platform:1.5.9'

    // Deep learning
    implementation 'org.deeplearning4j:deeplearning4j-core:1.0.0-M2.1'


    implementation 'org.nd4j:nd4j-native-platform:1.0.0-M2.1'

    // image pipeline
    implementation 'org.datavec:datavec-api:1.0.0-M2.1'

    // Lombok for cleaner code
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform()
}
